--- a/src/mocks/dummy-tasks.json
+++ b/src/mocks/dummy-tasks.json
@@ -4,27 +4,31 @@
         "title": "Normal title 1",
         "description": "This is description for task. This task is hard coded in json",
         "reporter": "Julian",
-        "assignee": "Alex"
+        "assignee": "Sam",
+        "state" : "review"
     },
     {
         "id": "2",
         "title": "Normal title 2",
         "description": "This is description for task. This task is hard coded in json",
         "reporter": "Julian",
-        "assignee": "Alex"
+        "assignee": "Mary",
+        "state" : "done"
     },
     {
         "id": "3",
         "title": "Normal title 3",
         "description": "This is description for task. This task is hard coded in json",
         "reporter": "Julian",
-        "assignee": "Alex"
+        "assignee": "Martin",
+        "state" : "review"
     },
     {
         "id": "4",
         "title": "Normal title 4",
         "description": "This is description for task. This task is hard coded in json",
         "reporter": "Julian",
-        "assignee": "Alex"
+        "assignee": "Alex",
+        "state" : "done"
     }
 ]
